criacao e configuracao de metodos crud e swagger

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+# SWAGGER
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.defer-datasource-initialization=true
 
 server.port=8080
 
