--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/quiz
 spring.datasource.username=root
 spring.datasource.password=ivvpyfx7
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.error.include-stacktrace=never
